Cambios en cap2sec1

--- a/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
+++ b/Informe Final/Capitulos/Capitulo2/cap2sec1.tex
@@ -167,7 +167,7 @@
 \section{Requisitos de usuario y tecnológicos}
 \textbf{Requisitos de usuario:} Los usuarios serán todas aquellas personas mayores de 18 años que puedan acceder a la aplicación Web, sean empleados de la empresa Zimmerman Muebles SRL y tengan una dirección de correo electrónico. Las interfaces deben ser intuitivas, fáciles de usar y amigables, de manera que con unas breves instrucciones sean capaces de usarla.
 
-\textbf{Requisitos tecnológicos:} En vista de que la aplicación debe correr en diferentes navegadores de diferentes dispositivos, y teniendo en cuenta un futuro crecimiento de ZM Gestión, se optará por un entorno económico y fácil de instalar. La aplicación se ejecutará sobre un esquema Cliente/Servidor Internet, con los procesos ejecutándose parte en el servidor web y de bases de datos, y la interfaz de usuario y procesos de interfaz ejecutándose en los clientes y éstos solicitando requerimientos al servidor vía el protocolo HTTP. El navegador del cliente debe ser HTML 2.0 compatible y los servidores serán dimensionados en base a los servicios web, de bases de datos y conexiones simultáneas; la aplicación debe estar disponible en un régimen de 24x7 y el número esperado de usuarios será de 100, con un factor de simultaneidad de 40%. 
+\textbf{Requisitos tecnológicos:} En vista de que la aplicación debe correr en diferentes navegadores de diferentes dispositivos, y teniendo en cuenta un futuro crecimiento de ZM Gestión, se optará por un entorno económico y fácil de instalar. La aplicación se ejecutará sobre un esquema Cliente/Servidor Internet, con los procesos ejecutándose parte en el servidor web y de bases de datos, y la interfaz de usuario y procesos de interfaz ejecutándose en los clientes y éstos solicitando requerimientos al servidor vía el protocolo HTTP. El navegador del cliente debe ser HTML 2.0 compatible y los servidores serán dimensionados en base a los servicios web, de bases de datos y conexiones simultáneas; la aplicación debe estar disponible en un régimen de 24x7 y el número esperado de usuarios será de 100, con un factor de simultaneidad de 40 porciento. 
 
 \section{Requisitos de interfaces externas}
 \textbf{Interfaces de usuario:} La interfaz de usuario debe ser web responsive.
@@ -177,9 +177,7 @@
 \textbf{Interfaces software:} La aplicación deberá interactuar con un sistema de envíos automático de correos electrónicos tipo MailGun.
 
 \section{Requisitos de rendimiento}
-El tiempo de respuesta de la aplicación a cada función solicitada por el usuario no debe ser
-superior a los 10 segundos en una velocidad efectiva de conexión de 512 Kbps. El tiempo de respuesta a los listados dependerá de la cantidad de
-datos solicitados.
+El tiempo de respuesta de la aplicación a cada función solicitada por el usuario no debe ser superior a los 10 segundos en una velocidad efectiva de conexión de 512 Kbps. El tiempo de respuesta a los listados dependerá de la cantidad de datos solicitados.
 
 \section{Requisitos de desarrollo}
 El ciclo de vida será el de Prototipado Evolutivo, debiendo orientarse hacia el desarrollo de un sistema flexible que permita incorporar de manera sencilla cambios y nuevas funcionalidades. 
