Cambios en informe final con imagenes

--- a/Informe Final/Documentacion.tex
+++ b/Informe Final/Documentacion.tex
@@ -6,7 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
-\graphicspath{ {imagenes/} }
+\graphicspath{ {Imagenes/} }
 \DeclareGraphicsExtensions{.png,.jpg}
 \setlength{\parindent}{12pt}
 \setcounter{secnumdepth}{3}
@@ -135,8 +135,8 @@ unicode	]{hyperref}
 \tableofcontents
 \input{Capitulo1.tex}
 \input{Capitulo2.tex}
-%\input{Capitulo3.tex}
-%\input{Capitulo4.tex}
+\input{Capitulo3.tex}
+\input{Capitulo4.tex}
 %\input{Capitulo5.tex}
 %\input{Capitulo6.tex}
 %\input{Capitulo7.tex}
