--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -27,17 +27,16 @@
 		\item Sesiones
 		\begin{itemize}
 			\itemCaseUse{iniciarSesion}{Iniciar sesión}
-			%\itemCaseUse{cerrarSesion}{Cerrar sesión}
+			\itemCaseUse{cerrarSesion}{Cerrar sesión}
 		\end{itemize}
 		\item Gestión empleados
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearEmpleado}{Crear empleado}
-			%\itemCaseUse{buscarAvanzadoEmpleados}{Buscar avanzado empleados}
-			%\itemCaseUse{darBajaEmpleado}{Dar de baja empleado}
-			%\itemCaseUse{darAltaEmpleado}{Dar de alta empleado}
-			%\itemCaseUse{modificarEmpleado}{Modificar empleado}
-			%\itemCaseUse{borrarEmpleado}{Borrar empleado}
+			\itemCaseUse{crearEmpleado}{Crear empleado}
+			\itemCaseUse{buscarAvanzadoEmpleados}{Buscar avanzado empleados}
+			\itemCaseUse{darBajaEmpleado}{Dar de baja empleado}
+			\itemCaseUse{darAltaEmpleado}{Dar de alta empleado}
+			\itemCaseUse{modificarEmpleado}{Modificar empleado}
+			\itemCaseUse{borrarEmpleado}{Borrar empleado}
 		\end{itemize}
 		\item Gestión roles
 		\begin{itemize}
@@ -361,15 +360,15 @@
 		\begin{enumerate}
 			%Sesiones
 			\input{Capitulos/Capitulo4/CasosUso/Sesiones/iniciarSesion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/Sesiones/cerrarSesion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/Sesiones/cerrarSesion.tex}
 
 			%GestionEmpleados
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/darBajaEmpleado.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/darAltaEmpleado.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/borrarEmpleado.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/crearEmpleado.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/darBajaEmpleado.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/darAltaEmpleado.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/modificarEmpleado.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/borrarEmpleado.tex}
 
 			%GestionRoles
 			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/crearRol.tex}
