Descripciones textuales con diagramas de activiad gestion de productos

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/buscarAvanzadoEmpleados.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{27/01/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUbuscarAvanzadoEmpleados - Buscar avanzado empleados} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a los administradores buscar empleados a partir de una cadena de texto de busqueda.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a los administradores buscar empleados a partir de una cadena de texto de búsqueda.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere encontrar un empleado existente en el sistema.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber iniciado sesión en el sistema y tener el permiso necesario para realizar esta función.} %Precondiciones
