--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -48,12 +48,11 @@
 		\end{itemize}
 		\item Gestión productos
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearProducto}{Crear producto}
-			%\itemCaseUse{buscarAvanzadoProductos}{Buscar avanzado productos}
-			%\itemCaseUse{darBajaProducto}{Dar de baja producto}
+			\itemCaseUse{crearProducto}{Crear producto}
+			\itemCaseUse{buscarAvanzadoProductos}{Buscar avanzado productos}
+			\itemCaseUse{darBajaProducto}{Dar de baja producto}
 			%\itemCaseUse{darAltaProducto}{Dar de alta producto}
-			%\itemCaseUse{modificarProducto}{Modificar producto}
+			\itemCaseUse{modificarProducto}{Modificar producto}
 			%\itemCaseUse{borrarProducto}{Borrar producto}
 		\end{itemize}
 		\item Gestión telas
@@ -377,11 +376,11 @@
 			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/borrarRol.tex}
 
 			%GestionProductos
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/buscarAvanzadoProductos.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductos/buscarAvanzadoProductos.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex}
 			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/darAltaProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex}
 			%\input{Capitulos/Capitulo4/CasosUso/GestionProductos/borrarProducto.tex}
 
 			%GestionTelas
